	-fixed some false alarms

-Portuguese:
	-added a few rules
	-it now has 3400+ compound words


-fixed a bug where chunk annotations were not tested in <and> groups

-fixed a bug in the unification mechanism that discarded some of the matching
 interpretations prematurely

-added support for chunk annotations in the disambiguator, and fixed one bug
 in filtering tokens with chunk annotations

-API:
	-SentenceTokenizer is now an interface, the implementation has been moved to
		RegexSentenceTokenizer, but this is deprecated and SRXSentenceTokenizer
		should be used instead
	-Some methods from org.languagetool.tools.StringTools have been moved to
	 the org.languagetool.gui.Tools class in the languagetool-gui-commons project
	-LanguageToolListener.languageToolEventOccured() has been renamed to
	 LanguageToolListener.languageToolEventOccurred()
	-org.languagetool.tools.SymbolLocator isn't public anymore (shouldn't affect anybody)
	-removed DanishSentenceTokenizer which had been deprecated for three years

-languagetool-wikipedia: the command line options for checking a Wikipedia dump
	have been simplified. The command can now be called like this:
	java -jar languagetool-wikipedia.jar check-dump -l en -f enwiki-20130621-pages-articles.xml
	Call just "java -jar languagetool-wikipedia.jar check-dump" to get a usage message.


2.3.1 (2013-10-07, released on Maven Central only)

	-fixes for thread-safety


2.3 (2013-09-30)

-Breton:
	-added/improved a few rules
	-fixed false alarms
	-updated POS dictionary from Apertium (svn r47282)

-Catalan:
	-added support for language code ca-ES-valencia (Catalan Valencian),
	 to be used in LibreOffice 4.2.0
	-added a simple replace rule with hundreds of replacement suggestions
	-added/improved several rules
	-fixed false alarms

-Chinese:
	-added a workaround for a StringIndexOutOfBoundsException
	 (http://sourceforge.net/p/languagetool/bugs/186/)

-English:
	-added replacement patterns for the spelling checker to make suggestions