@@ -91,6 +91,7 @@
             <version>1.7.1</version>
         </dependency>
         <dependency>
+            <!-- Note: if you update morfologik here, remember to also update morfologik-tools in languagetool-standalone -->
             <groupId>org.carrot2</groupId>
             <artifactId>morfologik-speller</artifactId>
             <version>1.7.1</version>
