@@ -130,7 +130,13 @@
             <artifactId>language-all</artifactId>
            <version>2.4-SNAPSHOT</version>
         </dependency>
-                
+
+        <dependency>
+            <groupId>org.carrot2</groupId>
+            <artifactId>morfologik-tools</artifactId>
+            <version>1.7.1</version>
+        </dependency>
+
         <!-- Some tests are used at runtime for rule developers, thus no 'test' scope here: -->
         <dependency>
             <!-- see http://stackoverflow.com/questions/174560/sharing-test-code-in-maven#174670 -->
