@@ -35,6 +35,10 @@ LanguageTool Change Log
 -added support for chunk annotations in the disambiguator, and fixed one bug
  in filtering tokens with chunk annotations
 
+-new command line tools to export and create binary dictionaries:
+	org.languagetool.dev.DictionaryExporter
+	org.languagetool.dev.POSDictionaryBuilder
+
 -API:
 	-SentenceTokenizer is now an interface, the implementation has been moved to
 		RegexSentenceTokenizer, but this is deprecated and SRXSentenceTokenizer
